--- a/Shuttle.Recall.OpenTelemetry/.package/package.nuspec
+++ b/Shuttle.Recall.OpenTelemetry/.package/package.nuspec
@@ -3,7 +3,7 @@
 <package>
 	<metadata>
 		<id>Shuttle.Recall.OpenTelemetry</id>
-		<version>1.0.0</version>
+		<version>1.0.0-beta.3</version>
 		<authors>Eben Roux</authors>
 		<owners>Eben Roux</owners>
 		<license type="expression">BSD-3-Clause</license>
