--- a/Shuttle.Recall.OpenTelemetry/Shuttle.Recall.OpenTelemetry.csproj
+++ b/Shuttle.Recall.OpenTelemetry/Shuttle.Recall.OpenTelemetry.csproj
@@ -1,13 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="OpenTelemetry" Version="1.4.0-beta.3" />
-    <PackageReference Include="Shuttle.Recall" Version="16.1.1" />
+    <PackageReference Include="OpenTelemetry" Version="1.8.1" />
+    <PackageReference Include="Shuttle.Recall" Version="17.0.0" />
   </ItemGroup>
 
   <ItemGroup>
